--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -65,12 +65,11 @@ jobs:
           path: dist
   deploy:
     needs: build
+    uses: ./.github/workflows/reusable.yml
+  report:
+    needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Get build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: dist-files
       - name: Output contents
         run: ls
       - name: Deploy
