--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -3,5 +3,6 @@ on: workflow_call
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    steps:
       - name: output information
         run: echo "now deploying the sadi..."
