--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -63,6 +63,7 @@ jobs:
           path: dist
   deploy:
     needs: build
-    uses: ./gitactionworkflow/.github/workflows/reusable.yml
+    uses: krishnh/gitactionworkflow/.github/workflows/reusable.yml@main
+
     
     
