--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -63,7 +63,7 @@ jobs:
           path: dist
   deploy:
     needs: build
-    uses: krishnh/gitactionworkflow/.github/workflows/reusable.yml@main
+    uses: ./.github/workflows/reusable.yml
 
     
     
