--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -64,6 +64,8 @@ jobs:
   deploy:
     needs: build
     uses: ./.github/workflows/reusable.yml
-
+    with: 
+     artifacts_name: dist-files
+     
     
     
