--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -1,8 +1,21 @@
 name: reusable deploy
-on: workflow_call
+on: 
+ workflow_call: 
+  inputs:
+   artifacts_name:
+    description: Artifact name
+    type: string
+    default: dist
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: get code
+        run: actions/download-artifact@v4
+        with:
+         name: ${{ inputs.artifacts_name }}
       - name: output information
         run: echo "now deploying the sadi..."
+      
+          
