--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get code
-        run: actions/download-artifact@v4
+        uses: actions/download-artifact@v4
         with:
          name: ${{ inputs.artifacts_name }}
       - name: output information
