--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -24,5 +24,5 @@ runs:
       id: install
       run: |
         npm ci   
-        echo "XYZ=${{ inputs.caching }}" >> $GITHUB_OUTPUT
+        echo "XYZ='${{inputs.caching}}'" >> $GITHUB_OUTPUT
       shell: bash
