--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -5,10 +5,10 @@ inputs:
     description: "is cching required or not "
     required: false 
     default: 'true'
-outputs:
-  used-cache:
-    description: "whether we use cache or not" 
-    value: ${{ steps.install.outputs.XYZ }}
+# outputs:
+#   used-cache:
+#     description: "whether we use cache or not" 
+#     value: ${{ steps.install.outputs.XYZ }}
 
 runs:
   using: 'composite'
@@ -24,5 +24,5 @@ runs:
       id: install
       run: |
         npm ci   
-        echo "XYZ='${{inputs.caching}}'">>$GITHUB_OUTPUT
+        # echo "XYZ='${{inputs.caching}}'">>$GITHUB_OUTPUT
       shell: bash
