--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,17 +10,12 @@ on:
      options:
       - 'cloud'
       - 'on-prem'
-jobs:
-  depoy: 
-    runs-on: ubuntu-latest
-    steps: 
-     - name: checkout repository
-       uses: actions/checkout@v4
+
 jobs:
   call-reusable:
   uses: ./.github/workflows/reusable_workflow.yml 
   with:
-   env_types: {{ github.event.inputs.environment }}  
-        
+   env_types: ${{ github.event.inputs.environment }}  
+
 
 
