--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
   call-reusable:
   uses: ./.github/workflows/reusable_workflow.yml 
   with:
-   env_types: ${{ github.event.inputs.environment }}  
+   env_type: ${{ github.event.inputs.environment }}  
 
 
 
